--- a/public/template/front/css/custom.css
+++ b/public/template/front/css/custom.css
@@ -246,8 +246,12 @@ header {
     z-index: 2;
 }	
 .text-contant h2 a, .text-contant h2 a:hover, .text-contant h2 a:focus {
-    color: #222;
+    background: linear-gradient(#0000fe, #fe0000);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     opacity: 1;
+    font-weight: 600;
 }
 .icon {
     background: #fff;
@@ -280,8 +284,8 @@ header {
     background: #fe0000;
 }
 .typewrite {
-    font-size: 60px;
-    margin-top: 10px;
+    font-size: 40px;
+    margin-top: 5px;
     float: left;
     width: 100%;
     text-align: center;
