--- a/public/template/front/css/custom.css
+++ b/public/template/front/css/custom.css
@@ -214,7 +214,7 @@ header {
 .appointment-form h3 {
     float: left;
     margin: 0;
-    background: linear-gradient(to right, #0000fe 0%, #f60c07 100%);
+    background: #0000fe;
     width: 100%;
     color: #fff;
     padding: 15px 25px;
@@ -246,10 +246,7 @@ header {
     z-index: 2;
 }	
 .text-contant h2 a, .text-contant h2 a:hover, .text-contant h2 a:focus {
-    background: linear-gradient(#0000fe, #fe0000);
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: #000;
     opacity: 1;
     font-weight: 600;
 }
